syntax = "proto3";
option go_package = "github.com/mtharmer/rpc-go/rpcgo";

package rpcgo;

service DoStuff {
	rpc PrintHello (HelloRequest) returns (HelloReply) {};
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}
